--- a/AlpayMakina/AlpayMakina/AlpayMakina.csproj
+++ b/AlpayMakina/AlpayMakina/AlpayMakina.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Dapper" Version="2.1.28">
       <GeneratePathProperty>True</GeneratePathProperty>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.1">
       <GeneratePathProperty>True</GeneratePathProperty>
     </PackageReference>
