--- a/AlpayMakina/AlpayMakina/AlpayMakina.csproj
+++ b/AlpayMakina/AlpayMakina/AlpayMakina.csproj
@@ -26,10 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\UI\Data\" />
-    <Folder Include="Areas\UI\Models\" />
+    <Folder Include="wwwroot\Logo\" />
   </ItemGroup>
 
 </Project>
